--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "graphviz_funcs"]
 	path = graphviz_funcs
 	url = https://github.com/I1Va/graphviz_funcs.git
+[submodule "stack"]
+	path = stack
+	url = https://github.com/I1Va/stack.git
